--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "webpack-library-starter",
   "version": "0.1.3",
   "description": "Produce universal library with webpack and es6",
-  "main": "lib/library.js",
+  "main": "lib/practice.js",
   "scripts": {
     "build": "webpack --mode=build",
     "dev": "webpack --progress --colors --watch --mode=dev",
-    "test": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
+    "test": "node-debug mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
   },
   "devDependencies": {
     "babel": "6.3.13",
@@ -20,6 +20,7 @@
     "eslint-loader": "1.1.0",
     "mocha": "2.3.4",
     "webpack": "1.12.9",
+    "webpack-livereload-plugin": "^0.9.0",
     "yargs": "3.32.0"
   },
   "repository": {
